Sun Nov  7 14:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/o_vscanf.c Reverted to earlier version - the last fix was
	causing distributed objects to fail!  I don't know why, but DO seems
	more important than the bugfix - so, pending a rewrite of DO
	encoding/decoding to remove the dependency on the old stream code,
	we need to leave this as it is.

1999-11-09  Adam Fedor  <fedor@gnu.org>

	* Source/o_vscanf.c (o_vscanf): Don't count '\n' as whitespace.

Sun Nov  7 14:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/NSDebug.h: Added NSWarnLog(), NSWarnFLog() and
	NSWarnMLog() macros to log warnings about potential programming errors.
	* Source/NSArray.m: Change to use NSWarnMLog() for warnings.
	* Source/NSGArray.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto

Thu Nov  4 1999  Michael Hanni <mhanni@sprintmail.com>

	* Source/NSObject.m: added FreeBSD specific code in
	initialization so that the FPU is intialized with the correct
	exception flag. This allows NSConnection to work on FreeBSD (gdnc,
	gdomap, gpbs.)

Thu Nov  4 10:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: use NSLog() to warn about attempts to remove nil.
	* Source/NSGArray.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto

Fri Oct 29 10:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSInvocation.m: ([-initWithTarget:selector:]) possible fix
	for structure arguments grabbed from varargs.

Tue Oct 19 11:28:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScanner.m: skipToNextField() - cope with a nil set of
	characters to be skipped.

Fri Oct 15 01:28:16 1999  Lyndon Tremblay <humasect@coolmail.com>

	* Source/NSURL.m: (-[scheme]) removed a hopefully accidentally placed
	space character in a call to (-[NSString rangeOfString]).
	